First initial commit with a working EFI binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ authors = ["Christopher Johnstone <meson800@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+r-efi = "2.1.0"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
