--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,3 @@
-[package]
-name = "nebulos"
-version = "0.1.0"
-authors = ["Christopher Johnstone <meson800@gmail.com>"]
-edition = "2018"
+[workspace]
+members = ["hydrogen"]
 
-[dependencies]
-r-efi = "2.1.0"
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
